# trackformer

src/: prepare_ycbv.py
src/prepare_ycbv/: CMakeLists.txt  prepare_ycbv.cpp  prepare_ycbv_tbb.cpp
